--- a/evaluasi_html.html
+++ b/evaluasi_html.html
@@ -4,221 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            color: burlywood;
-            background-color: #f5f7fa;
-        }
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #c3a995;
-            padding: 0 10px;
-            position: sticky;
-            top: 0;
-        }
-        h1 {
-            color: #3e2f25;
-        }
-        .logo {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 0 10px;
-            cursor: pointer;
-        }
-        .logo img {
-            width: 35px;
-            height: 35px;
-        }
-        li {
-            display:inline-block;
-            padding: 0 10px;
-            margin: 0 10px;
-        }
-        a {
-            text-decoration: none;
-            color: #46280e;
-        }
-        li:hover {
-            text-decoration: underline;
-        }
-        p{
-            font-size: large;
-        }
-        .portofolio {
-            display: grid;
-            grid-template-columns: 1fr auto;
-            align-items: center;
-            padding: 200px 100px;
-            margin-top: 30px;
-        }
-        .portofoliotext {
-            padding: 20px;
-        }
-        .button {
-            padding: 10px 20px;
-            background-color: #d77a2f;
-            color: white;
-            border-radius: 10px;
-        }
-        .fotoprofil {
-            width: 150px;
-            max-width: 100%;
-            border-radius: 10px;
-        }
-        .project {
-           background-color: #5a4634;
-           padding: 10px;
-           text-align: center;
-           border-radius: 10px;
-           width: 100%;
-           cursor: pointer;
-           transition: 0.3s ease;
-        }
-        .project:hover {
-            transform: scale(1.1);
-        }
-        .projects-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 50px;
-            padding: 300px 20px;
-            justify-content: center;
-        }
-        img {
-            width: 100%;
-            border-radius: 10px;
-        }
-
-        .contact-container {
-            background-color: #5a4634;
-            padding: 30px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 15px;
-        }
-        .contact {
-            max-width: 400px;
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-        .contact h3 {
-            text-align: center;
-            color: white;
-            margin-bottom: 10px;
-        }
-        .contact input,
-        .contact select,
-        .contact textarea {
-            padding: 8px;
-            border-radius: 5px;
-            border: none;
-            outline: none;
-            font-size: 14px;
-        }
-        .contact button {
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #d77a2f;
-            color: white;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        .contact button:hover {
-            background-color: #b95f1f;
-        }
-
-        .hubungi {
-            display: flex;
-            gap: 10px;
-        }
-        .hub {
-            width: 30px;
-            cursor: pointer;
-        }
-
-        .contactbutton {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background-color: #d77a2f;
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        footer {
-            background-color: #c3a995;
-            color: #3e2f25;
-            text-align: center;
-            padding: 15px;
-            margin-top: 40px;
-            font-size: 14px;
-        }
-
-        @media (max-width: 600px) {
-            .navbar ul {
-                display: none;
-            }
-            nav ul {
-                display: flex;
-                text-align: center;
-                padding: 0;
-            }
-            li {
-                display: block;
-                margin: 1px 0;
-            }
-            .portofolio {
-                grid-template-columns: 1fr;
-                padding: 50px 20px;
-                text-align: center;
-            }
-            .fotoprofil {
-                width: 120px;
-                margin-top: 20px;
-            }
-            .projects-container {
-                grid-template-columns: 1fr;
-                padding: 50px 20px;
-                text-align: center;
-                justify-content: center;
-            }
-            .contact-container {
-                padding: 20px;
-            }
-            .contactbutton {
-                padding: 8px 12px;
-                font-size: 14px;
-            }
-        }
-        @media (max-width: 900px) {
-            .portofolio {
-                grid-template-columns: 1fr;
-                padding: 100px 50px;
-            }
-            .projects-container {
-                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-                padding: 100px 20px;
-
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
         <div class="logo">
-            <img src="logo.png">
+            <img src="images/logo.png">
             <h1>My portofolio</h1>
         </div>
         <div class="navbar">
@@ -242,28 +33,28 @@
             <button class="button"><a href="#project" style="color:white;">My Project</a></button>
         </div>
         <div>
-            <img src="profil.png" class="fotoprofil">
+            <img src="images/profil.png" class="fotoprofil">
         </div>
     </div>
 
     <div id="project" class="projects-container">
         <div class="project">
-            <img src="project 3.png">
+            <img src="images/project 3.png">
             <h3>Project 1</h3>
             <p>ini project 1 saya</p>
         </div>
         <div class="project">
-            <img src="project 3.png">
+            <img src="images/project 3.png">
             <h3>Project 2</h3>
             <p>ini project 2 saya</p>
         </div>
         <div class="project">
-            <img src="project 3.png">
+            <img src="images/project 3.png">
             <h3>Project 3</h3>
             <p>ini project 3 saya</p>
         </div>
         <div class="project">
-            <img src="project 3.png">
+            <img src="images/project 3.png">
             <h3>Project 4</h3>
             <p>ini project 4 saya</p>
         </div>
@@ -291,11 +82,11 @@
             <button type="submit">Kirim</button>
         </form>
         <div class="hubungi">
-            <img src="instagram.png" class="hub">
-            <img src="facebook.png" class="hub">
-            <img src="linkedin.png" class="hub">
-            <img src="telegram.png" class="hub">
-            <img src="twitter.png" class="hub">
+            <img src="images/instagram.png" class="hub">
+            <img src="images/facebook.png" class="hub">
+            <img src="images/linkedin.png" class="hub">
+            <img src="images/telegram.png" class="hub">
+            <img src="images/twitter.png" class="hub">
         </div>
     </div>
 
