perbarui isi repo

--- a/evaluasi_html.html
+++ b/evaluasi_html.html
@@ -13,17 +13,18 @@
             <h1>My portofolio</h1>
         </div>
         <div class="navbar">
-            <ul>
+            <ul class="nav-links">
                 <li><a href="#">about</a></li>
                 <li><a href="#project">project</a></li>
                 <li><a href="#contact">contact</a></li>
             </ul>
-            <div>
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
         </div>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
     </nav>
 
     <div class="portofolio">
